# MSc-blockchain-ssi-pqc

./: mkdocs-requirements.txt  pyproject.toml  test_did_peer_4_key_numbering.py
.github/workflows/: bdd-integration-tests.yml  bdd-interop-tests.yml  codeql.yml  format.yml  nightly.yml  pip-audit.yml  pr-tests.yml  publish-docs.yml  publish.yml  pythonpublish.yml  scenario-integration-tests.yml  scorecard.yml  snyk-lts.yml  snyk.yml  sonar-merge-main.yml  sonar-pr.yml
acapy-plugins/: mkdocs-requirements.txt
acapy-plugins/_old/pqcrypto_fm/: QUICK_START.md  pyproject.toml  setup.py
acapy-plugins/_old/pqcrypto_fm/pqcrypto_fm/oqs/: sig.py
acapy-plugins/_old/pqcrypto_fm/pqcrypto_fm/v1_0/: anoncreds_integration.py  crypto_integration.py  key_types.py  routes.py
acapy-plugins/_old/pqcrypto_fm/pqcrypto_fm/v1_0/services/: __init__.py  pqc_credential_service.py  pqc_crypto_service.py  pqc_did_service.py
acapy-plugins/_old/pqcrypto_fm/pqcrypto_fm/v1_0/tests/: test_config.py  test_key_types.py
acapy-plugins/_old/pqcrypto_fm_olddd/: pyproject.toml
acapy-plugins/_old/pqcrypto_fm_olddd/.devcontainer/: devcontainer.json
acapy-plugins/_old/pqcrypto_fm_olddd/docker/: default.yml  integration.yml
acapy-plugins/_old/pqcrypto_fm_olddd/integration/: Dockerfile.test.runner  README.md  docker-compose.yml  pyproject.toml
acapy-plugins/_old/pqcrypto_fm_olddd/pqcrypto_fm/: __init__.py  definition.py
acapy-plugins/_old/pqcrypto_fm_olddd/pqcrypto_fm/v1_0/models/: pqc_key_record.py
acapy-plugins/_old/pqcrypto_fm_olddd/pqcrypto_fm/v1_0/routes/: pqc_routes.py
acapy-plugins/_old/pqcrypto_fm_olddd/pqcrypto_fm/v1_0/services/: pqc_crypto_service.py  pqc_key_service.py
acapy-plugins/_old/pqcrypto_fm_oldv2/: pyproject.toml
acapy-plugins/_old/pqcrypto_fm_oldv2/integration/: docker-compose.yml  pyproject.toml
acapy-plugins/_old/pqcrypto_fm_oldv2/pqcrypto_fm/: __init__.py  definition.py
acapy-plugins/_old/pqcrypto_fm_oldv2/pqcrypto_fm/v1_0/: __init__.py  config.py
acapy-plugins/_old/pqcrypto_fm_oldv2/pqcrypto_fm/v1_0/models/: pqc_key_record.py
acapy-plugins/_old/pqcrypto_fm_oldv2/pqcrypto_fm/v1_0/protocols/pqc_didcomm/: __init__.py  pqc_message_pack.py
acapy-plugins/_old/pqcrypto_fm_oldv2/pqcrypto_fm/v1_0/routes/: pqc_routes.py
acapy-plugins/_old/pqcrypto_fm_oldv2/pqcrypto_fm/v1_0/services/: __init__.py  pqc_crypto_service.py  pqc_key_service.py
acapy-plugins/_old/pqcrypto_hedera_fm/: README.md  setup.py
acapy-plugins/hedera/docker/: plugins-config-integration.yml
acapy-plugins/old/pqcrypto_fm_olddd/: README.md
acapy-plugins/old/pqcrypto_fm_oldv2/: README.md
acapy-plugins/old/pqcrypto_hedera_fm/: definition.py
acapy-plugins/pqc_didpeer4_fm/: README.md  setup.py
acapy-plugins/pqc_didpeer4_fm/pqc_didpeer4_fm/: __init__.py
acapy-plugins/pqcrypto_fm/: 20250922_pqc_workflow_working.py  INSTALL.md  MANIFEST.in  README.md  TROUBLESHOOTING.md  pqc_workflow.py
acapy-plugins/pqcrypto_fm/pqcrypto_fm/: __init__.py  definition.py
acapy-plugins/pqcrypto_fm/scripts/: build_liboqs.bat  build_liboqs.sh
acapy_agent/wallet/: did_method.py
cversuche/: docker-compose-cheqd-acapy.yml  hedera_traffic_generator.py  package-lock.json  pqc-issuer.lock_gebraucht?  pqc_system_summary.py  pqc_test.yml_gebraucht?  test_available_algorithms.py  test_complete_pqc_system.py  test_concrete_functionality.py  test_crypto_agile_pqc.py  test_dedicated_liboqs.py  test_direct_oqs.py  test_ml_kem_simple.py  test_persistent_simple.py  test_persistent_storage.py  test_pqc_complete_dedicated.py  test_pqc_did_indy.ipynb  test_pqc_hedera_plugin.py  test_pqc_hedera_plugin_fixed.py  test_pqc_hedera_working.py  test_simple_pqc_final.py  test_simplified_pqc.py
cversuche/cheqd-acapy-integration/: .env.cheqd.template  README-CHEQD-SETUP.md  README.md  docker-compose-cheqd-acapy.yml  ssi_workflow_cheqd.ipynb
cversuche/cheqd-acapy-integration/config/: holder-config.yml
cversuche/cheqd-acapy-integration/scripts/: init-acapy-agents.sh  init-cheqd.sh  init-wallets.sql
cversuche/config/: cheqd-plugin-config.yml  issuer-config.yml  pqc-plugin-config.yml  verifier-config.yml
cversuche/scripts/: start-cheqd-network.sh  wait-for-services.sh
cversuche/ssi-infrastructure/: LOCAL_BUILD.md  README.md  docker-compose.yml
cversuche/ssi-infrastructure/docker/: Dockerfile.cheqd-extended
cversuche/ssi-infrastructure/notebooks/: ssi-workflow.ipynb
cversuche/ssi-infrastructure/scripts/: build.sh  setup.sh  start.sh  status.sh  stop.sh  test-cheqd-connection.sh
demo/: pqc_demo_files_overview.md  run_demo_pqc.sh  run_demo_pqc_full.py
demo/playground/examples/: pyproject.toml
demo/runners/: acme.py  acme_pqc.py  alice_pqc.py  faber_pqc.py  run_pqc_demo.py
hopE/: Dockerfile.acapy-base-pqc  PQC_PROXY_SETUP.md  SSI_Complete_Workflow.ipynb  SSI_Complete_Workflow_backup_kritis_szenario.ipynb  SSI_Complete_Workflow_old_szenario.ipynb  SSI_Complete_Workflow_pre_clearance_backup.ipynb  docker-compose.yml  holder-args.yml  issuer-args.yml  migrate_to_security_clearance.py  migration_summary.md  test_pqc_proxy.sh  update_cell_23.py  update_to_pqc_proxy.py
hopE/.venv.old/: pyvenv.cfg
hopE/pqc_reverseproxy_nginx/: Dockerfile
hopE/pqc_reverseproxy_nginx/certs/: holder.crt  issuer.key  rootCA.srl  verifier.crt  verifier.csr
hopE/pqc_reverseproxy_nginx/nginx-conf/: nginx_holder.conf  nginx_issuer.conf  nginx_verifier.conf
hopE/pqc_sidecarproxy_nginx/certs/: holder.csr  holder.key  issuer.crt  issuer.csr  verifier.key
hopE/pqc_sidecarproxy_nginx/nginx-conf/: nginx_holder.conf  nginx_issuer.conf  nginx_verifier.conf
hopE_working_backup/: README.md  SSI_Complete_Workflow.ipynb  SSI_Complete_Workflow.working_without_revocation.ipynb  docker-compose.yml  verifier-args.yml
indy-tails-server/docker/: docker-compose.yml  manage
indy-tails-server/docker/pqc_reverseproxy_nginx/: .dockerignore
indy-tails-server/docker/pqc_sidecarproxy_nginx/: Dockerfile
main/CHANGELOG/: index.html
oqs-demos/curl/: Dockerfile-QUIC
scenarios/: Dockerfile  pyproject.toml
von-network/: docker-compose.yml  manage
(+141 files in other folders)
