[tool.poetry]
name = "pqcrypto_fm"
version = "1.0.0"
description = "Post-Quantum Cryptography Plugin for ACA-Py - Full SSI Lifecycle Support with liboqs"
authors = ["PQCrypto_FM Team"]
readme = "README.md"
keywords = ["post-quantum", "cryptography", "ACA-Py", "SSI", "liboqs"]

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^41.0.0"
acapy-agent = { version = "~1.3.2", optional = true }
# liboqs-python removed - will be bundled automatically

[tool.poetry.extras]
aca-py = ["acapy-agent"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
pytest = "^8.3.5"
pytest-asyncio = "^1.1.0"
pytest-cov = "^5.0.0"
pytest-ruff = "^0.4.1"

[tool.poetry.group.integration.dependencies]
aries-askar = { version = "~0.4.3" }
indy-credx = { version = "~1.1.1" }
indy-vdr = { version = "~0.4.1" }
anoncreds = { version = "0.2.0" }

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "C", "D"]
ignore = [
    "D203", "D204", "D213", "D215", "D400", "D401", "D404",
    "D406", "D407", "D408", "D409", "D413", "D202", "D104", "C901"
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
"**/{demo}/*" = ["F841", "D", "E501"]

[tool.pytest.ini_options]
testpaths = "pqcrypto_fm"
addopts = """
    -p no:warnings
    --quiet --junitxml=./.test-reports/junit.xml
    --cov-config .coveragerc --cov=pqcrypto_fm --cov-report term --cov-report xml
"""
markers = []
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["*/tests/*", "docker/*", "integration/*", "*/definition.py"]
data_file = ".test-reports/.coverage"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract"]
precision = 2
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = ".test-reports/coverage.xml"

[build-system]
requires = ["setuptools>=45", "wheel", "cmake", "requests"]
build-backend = "setuptools.build_meta"