[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pqcrypto-fm"
version = "1.0.0"
description = "Post-Quantum Cryptography Plugin for ACA-Py - Future Mode"
authors = ["OpenWallet Foundation <info@openwallet.foundation>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/openwallet-foundation/acapy-plugins"
repository = "https://github.com/openwallet-foundation/acapy-plugins"
keywords = ["aries", "acapy", "post-quantum", "cryptography", "ssi", "quantum-safe"]
packages = [{ include = "pqcrypto_fm" }]

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = ">=1.0.0"
liboqs-python = ">=0.12.0"
pqcrypto = ">=0.3.0"
cryptography = ">=41.0.0"
aiohttp = ">=3.8.0"
marshmallow = ">=3.18.0"
marshmallow-dataclass = ">=8.5.0"
base58 = ">=2.1.0"
pynacl = ">=1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
isort = "^5.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=pqcrypto_fm --cov-report=term-missing"

[tool.black]
line-length = 90
target-version = ['py39']
