[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pqcrypto-fm-integration-tests"
version = "1.0.0"
description = "Integration tests for PQCrypto_FM plugin"
authors = ["OpenWallet Foundation <info@openwallet.foundation>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = ">=1.0.0"
liboqs-python = ">=0.12.0"
pqcrypto = ">=0.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
pytest-timeout = "^2.1.0"
aiohttp = ">=3.8.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
isort = "^5.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=pqcrypto_fm --cov-report=term-missing --cov-report=html --cov-report=xml --timeout=300"
markers = [
    "integration: integration tests requiring multiple agents",
    "pqc: tests requiring PQC algorithms",
    "demo: tests for demo functionality",
    "performance: performance benchmark tests",
    "slow: slow-running tests",
]

[tool.black]
line-length = 90
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 90

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "oqs.*",
    "pqcrypto.*",
    "aries_cloudagent.*",
]
ignore_missing_imports = true